Made some fixes to the spacing of words.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -100,6 +100,8 @@
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
   z-index: 1001;
   border-radius: 0px;
+  border: none;
+  margin: none;
 }
 .logo {
   height: 100%;
